<resources>
    <string name="app_name">AMazeByMatthewCheng</string>
    <string name="load_message">Load Maze</string>
    <string name="generate_message">Generate Maze</string>
    <string name="welcome_message">Ready to explore space?</string>
    <string name="skill_message">"Skill Level: "</string>
    <string name="generator_message">Generator:</string>
    <string name="rooms_message">Rooms:</string>
    <string name="control_message">MAIN CONTROL PANEL</string>
    <string name="room_disp_message">Rooms?</string>
    <string name="loading_message">Blasting off…</string>
    <string name="driver_message">DRIVER</string>
    <string name="quality_message">QUALITY</string>
    <string name="show_wall">Show Walls</string>
    <string name="show_full">Show Full</string>
    <string name="show_soln">Show Solution</string>
    <string name="map_size">Map Size</string>
    <string name="skip">Shortcut</string>
    <string name="F_string">F</string>
    <string name="E_string">E</string>
    <string name="R_string">R</string>
    <string name="L_string">L</string>
    <string name="B_string">B</string>
    <string name="start">Start</string>
    <string name="show_map">Show Map</string>
    <string name="speed_up">Speed Up</string>
    <string name="slow_down">Slow Down</string>
    <string name="skip_win">Go2Winning</string>
    <string name="skip_lose">Go2Losing</string>
    <string name='to_play'>Enter Maze</string>
    <string name="win_message">You Win!</string>
    <string name="win_text">Planet successfully explored</string>
    <string name="lose_message">You Lose</string>
    <string name="lose_text">Not enough energy to explore planet</string>
    <string name="energy">Energy Consumed:</string>
    <string name="distance">Distance Travelled:</string>
    <string name="optimal">Optimal Distance:</string>
    <string name="relaunch">Relaunch</string>
    <string name="jump">Jump</string>
</resources>